# PensionCalculator

./: README.md  calculator.py  constants.py  main.py  pyproject.toml  Данные.xlsx  Результат.xlsx
