[tool.poetry]
name = "rtl-test"
version = "0.1.0"
description = ""
authors = ["Danila Logunov <danilalogunov13@gmail.com>"]
readme = "README.md"
packages = [{include = "rtl_test"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.0.1"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

